--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="Assets/Vendor/Bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="Assets/Vendor/Mediaelement/mediaelementplayer.min.css">
+		<link rel="stylesheet" href="Assets/Vendor/Fontawesome/css/all.min.css">
 		
 		<style>
 			.masterContainer
@@ -19,13 +19,24 @@
 			{
 				display: none;
 			}
+			
+			.toolbarBottom
+            {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: auto;
+                background: #ebebeb;
+                padding: 5px;
+            }
 		</style>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm bg-light">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link" href="https://github.com/rdpchloe/offlinelyriceditor" target="_blank">
 						Chiira Lyric Editor For AIMP
 					</a>
 				</li>
@@ -34,8 +45,8 @@
 
 		<div class="container">
 			<div class="row masterContainer">
-				<div class="col-md-9">
-					<div class="row">
+				<div class="col-md-12">
+					<div class="row" style="margin-bottom: 50px;">
 						<div class="col-md-12 playerContainer">
 						</div>
 						<div class="col-md-12 lyricContainer">
@@ -44,28 +55,6 @@
 								</tbody>
 							</table>
 						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="lyricTool">
-						<label class="btn btn-primary btn-block">
-							Open Song <input type="file" id="inpMusic" hidden>
-						</label>
-						<button class="btn btn-block btn-primary" type="button" data-toggle="modal" data-target="#lyricModal">
-							Insert full lyrics
-						</button>
-						<button class="btn btn-block btn-primary btnSyncTime" type="button">
-							Sync current line
-						</button>
-						<button class="btn btn-block btn-success btnLyricOutput">
-							Generate lyric output
-						</button>
-						<!--<button class="btn btn-block btn-success">
-							Save as .lrc
-						</button>-->
-						
-						<!--For debugging-->
-						<!--<span>Current time: </span><span class="time"></span>-->
 					</div>
 				</div>
 			</div>
@@ -117,12 +106,32 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="toolbarBottom">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <label class="btn btn-primary" style="margin:0">
+                        <i class="fa fa-folder-open"></i><input type="file" id="inpMusic" hidden>
+                    </label>
+                    <button class="btn btn-primary btnTypeLyric" type="button">
+                        <i class="fa fa-align-justify"></i>
+                    </button>
+                    <button class="btn btn-primary btnSyncTime" type="button">
+						<i class="fa fa-indent"></i>
+					</button>
+					<button class="btn btn-success btnLyricOutput">
+						<i class="fa fa-save"></i>
+					</button>
+                </div>
+            </div>
+        </div>
+        
 	</body>
 	
 	<script src="Assets/Vendor/Jquery/jquery.min.js"></script>
 	<script src="Assets/Vendor/Popperjs/popper.min.js"></script>
 	<script src="Assets/Vendor/Bootstrap/js/bootstrap.min.js"></script>
-	<script src="Assets/Vendor/Mediaelement/mediaelement.min.js"></script>
 	<script src="Assets/Vendor/Stickyjs/jquery.sticky.js"></script>
+	<script src="Assets/Vendor/Bootbox/bootbox.min.js"></script>
 	<script src="Assets/Js/main.js"></script>
 </html>
